scripts/target/iptables-rules/var/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Wed Mar  4 18:31:03 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Mar  4 18:31:03 2015
# Generated by iptables-save v1.4.21 on Wed Mar  4 18:31:03 2015
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:465]
:POSTROUTING ACCEPT [2:465]
COMMIT
# Completed on Wed Mar  4 18:31:03 2015
# Generated by iptables-save v1.4.21 on Wed Mar  4 18:31:03 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:other_packets - [0:0]
:reject_packets - [0:0]
:services - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j other_packets
-A INPUT -j services
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -j reject_packets
-A INPUT -j DROP
-A OUTPUT -j ACCEPT
-A other_packets -m state --state INVALID -j DROP
-A other_packets -p icmp -j ACCEPT
-A other_packets -j RETURN
-A reject_packets -p tcp -j REJECT --reject-with tcp-reset
-A reject_packets -p udp -j REJECT --reject-with icmp-port-unreachable
-A reject_packets -p icmp -j REJECT --reject-with icmp-host-unreachable
-A reject_packets -j REJECT --reject-with icmp-proto-unreachable
-A reject_packets -j RETURN
-A services -j RETURN
COMMIT
# Completed on Wed Mar  4 18:31:03 2015
